openshift/pydemo.yaml
apiVersion: v1
items:
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    annotations:
      alpha.image.policy.openshift.io/resolve-names: '*'
      app.openshift.io/vcs-ref: master
      app.openshift.io/vcs-uri: http://git.home.nicknach.net/nick/pydemo.git
      image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"pydemo:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"pydemo\")].image"}]'
    creationTimestamp: "2020-02-20T04:17:13Z"
    labels:
      app: pydemo
      app.kubernetes.io/component: pydemo
      app.kubernetes.io/name: s2i-custom-python36
      app.kubernetes.io/part-of: pydemo
      app.openshift.io/runtime: s2i-custom-python36
      app.openshift.io/runtime-version: latest
    name: pydemo
    namespace: gitops
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: pydemo
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: pydemo
          deploymentconfig: pydemo
      spec:
        containers:
        - image: image-registry.openshift-image-registry.svc:5000/openshift/pydemo
          imagePullPolicy: Always
          name: pydemo
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      app.openshift.io/vcs-ref: master
      app.openshift.io/vcs-uri: http://git.home.nicknach.net/nick/pydemo.git
    labels:
      app: pydemo
      app.kubernetes.io/component: pydemo
      app.kubernetes.io/name: s2i-custom-python36
      app.kubernetes.io/part-of: pydemo
      app.openshift.io/runtime: s2i-custom-python36
      app.openshift.io/runtime-version: latest
    name: pydemo
    namespace: gitops
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: pydemo
      deploymentconfig: pydemo
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    labels:
      app: pydemo
      app.kubernetes.io/component: pydemo
      app.kubernetes.io/name: s2i-custom-python36
      app.kubernetes.io/part-of: pydemo
      app.openshift.io/runtime: s2i-custom-python36
      app.openshift.io/runtime-version: latest
    name: pydemo
    namespace: gitops
  spec:
    host: pydemo-gitops.apps.ocp.nicknach.net
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: pydemo
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - status: 'True'
        type: Admitted    
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
